very very draft gradle plugin, bug fixes, NCSS/invocation/lines adjustment as per JDK standards