@@ -1,8 +1,8 @@
 package io.codiqo.api.diff;
+import java.util.Set;
 
 import org.apache.commons.io.FilenameUtils;
 
-import com.google.common.collect.ImmutableSet;
 
 import lombok.experimental.UtilityClass;
 
@@ -12,7 +12,7 @@ public class LanguageCapabilities {
     // re-indent is a cosmetic change. Excludes layout-significant languages (Python, YAML, Makefiles, …)
     // where indentation carries meaning. Keyed on file extension since the analysis-layer language is
     // resolved later than diff generation; unknown extensions are treated as whitespace-significant.
-    private static final ImmutableSet<String> WHITESPACE_INSENSITIVE_EXTENSIONS = ImmutableSet.of(
+    private static final Set<String> WHITESPACE_INSENSITIVE_EXTENSIONS = Set.of(
             "java", "kt", "kts", "scala", "sc", "groovy", "gvy",
             "js", "jsx", "mjs", "cjs", "ts", "tsx",
             "go", "rs", "c", "h", "cc", "cpp", "cxx", "hpp", "hh", "hxx", "cs", "swift");
