@@ -3,7 +3,6 @@ package io.codiqo.lang.config;
 import java.util.List;
 import java.util.Optional;
 
-import com.google.common.collect.ImmutableList;
 
 import io.codiqo.api.config.ConfigFileSpec;
 import io.codiqo.api.diff.IneffectiveLineFilter;
@@ -11,7 +10,7 @@ import lombok.experimental.UtilityClass;
 
 @UtilityClass
 public class ConfigFiles {
-    private static final List<ConfigFileSpec> SPECS = ImmutableList.of(new PomFileSpec(), new ProtoFileSpec());
+    private static final List<ConfigFileSpec> SPECS = List.of(new PomFileSpec(), new ProtoFileSpec());
 
     public boolean isConfigFile(String path) {
         return SPECS.stream().anyMatch(spec -> spec.matches(path));
