@@ -6,7 +6,6 @@ import java.util.Map;
 
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableMap;
 
 import net.sourceforge.pmd.lang.Language;
 import net.sourceforge.pmd.lang.LanguageProcessorRegistry;
@@ -334,7 +333,7 @@ class JavaLineCountAnalyzerTest {
         try (TextFile file = TextFile.forCharSeq(source, fileId, LANG.getDefaultVersion())) {
             try (TextDocument doc = TextDocument.create(file)) {
                 LanguageRegistry registry = LanguageRegistry.singleton(LANG);
-                Map<Language, LanguagePropertyBundle> props = ImmutableMap.of(LANG, bundle);
+                Map<Language, LanguagePropertyBundle> props = Map.of(LANG, bundle);
                 try (LanguageProcessorRegistry procRegistry = LanguageProcessorRegistry.create(registry, props,
                         PmdReporter.quiet())) {
                     Parser parser = procRegistry.getProcessor(LANG).services().getParser();
