@@ -1,11 +1,11 @@
 package io.codiqo.jdtls;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableList;
 
 class JvmOptionsFilterTest {
     @Test
@@ -23,11 +23,11 @@ class JvmOptionsFilterTest {
     @Test
     void filtersJenkinsfileMavenOpts() {
         String input = "-server -Xms8g -XX:+UseZGC -XX:+SegmentedCodeCache -XX:+UseCompactObjectHeaders --sun-misc-unsafe-memory-access=allow";
-        assertEquals(ImmutableList.of("-Xms8g"), JvmOptionsFilter.keepMemory(input));
+        assertEquals(List.of("-Xms8g"), JvmOptionsFilter.keepMemory(input));
     }
     @Test
     void keepsHeapAndStack() {
-        assertEquals(ImmutableList.of("-Xmx2g", "-Xms512m", "-Xss256k"), JvmOptionsFilter.keepMemory("-Xmx2g -Xms512m -Xss256k"));
+        assertEquals(List.of("-Xmx2g", "-Xms512m", "-Xss256k"), JvmOptionsFilter.keepMemory("-Xmx2g -Xms512m -Xss256k"));
     }
     @Test
     void rejectsGcOptions() {
@@ -35,7 +35,7 @@ class JvmOptionsFilterTest {
     }
     @Test
     void handlesMultipleWhitespace() {
-        assertEquals(ImmutableList.of("-Xms8g", "-Xmx16g"), JvmOptionsFilter.keepMemory("-Xms8g    -Xmx16g"));
+        assertEquals(List.of("-Xms8g", "-Xmx16g"), JvmOptionsFilter.keepMemory("-Xms8g    -Xmx16g"));
     }
     @Test
     void rejectsLookalikes() {
